Source/WebKit2/WebProcess/Network/WebResourceLoader.cpp
@@ -125,8 +125,8 @@ void WebResourceLoader::didReceiveResponseWithCertificateInfo(const ResourceResp
     // Refrain from calling didReceiveResponse if QuickLook will convert this response, since the MIME type of the
     // converted resource isn't yet known. WebResourceLoaderQuickLookDelegate will later call didReceiveResponse upon
     // receiving the converted data.
-    m_quickLookHandle = QuickLookHandle::create(resourceLoader(), responseCopy.nsURLResponse());
-    if (!m_quickLookHandle)
+    m_coreLoader->documentLoader()->setQuickLookHandle(QuickLookHandle::create(resourceLoader(), responseCopy.nsURLResponse()));
+    if (!m_coreLoader->documentLoader()->quickLookHandle())
 #endif
         m_coreLoader->didReceiveResponse(responseCopy);
 
@@ -143,8 +143,8 @@ void WebResourceLoader::didReceiveData(const IPC::DataReference& data, int64_t e
     LOG(Network, "(WebProcess) WebResourceLoader::didReceiveData of size %i for '%s'", (int)data.size(), m_coreLoader->url().string().utf8().data());
 
 #if USE(QUICK_LOOK)
-    if (m_quickLookHandle) {
-        if (m_quickLookHandle->didReceiveData(adoptCF(CFDataCreate(kCFAllocatorDefault, data.data(), data.size())).get()))
+    if (QuickLookHandle* quickLookHandle = m_coreLoader->documentLoader()->quickLookHandle()) {
+        if (quickLookHandle->didReceiveData(adoptCF(CFDataCreate(kCFAllocatorDefault, data.data(), data.size())).get()))
             return;
     }
 #endif
@@ -156,8 +156,10 @@ void WebResourceLoader::didFinishResourceLoad(double finishTime)
     LOG(Network, "(WebProcess) WebResourceLoader::didFinishResourceLoad for '%s'", m_coreLoader->url().string().utf8().data());
 
 #if USE(QUICK_LOOK)
-    if (m_quickLookHandle && m_quickLookHandle->didFinishLoading())
-        return;
+    if (QuickLookHandle* quickLookHandle = m_coreLoader->documentLoader()->quickLookHandle()) {
+        if (quickLookHandle->didFinishLoading())
+            return;
+    }
 #endif
     m_coreLoader->didFinishLoading(finishTime);
 }
@@ -167,8 +169,8 @@ void WebResourceLoader::didFailResourceLoad(const ResourceError& error)
     LOG(Network, "(WebProcess) WebResourceLoader::didFailResourceLoad for '%s'", m_coreLoader->url().string().utf8().data());
     
 #if USE(QUICK_LOOK)
-    if (m_quickLookHandle)
-        m_quickLookHandle->didFail();
+    if (QuickLookHandle* quickLookHandle = m_coreLoader->documentLoader()->quickLookHandle())
+        quickLookHandle->didFail();
 #endif
     if (m_coreLoader->documentLoader()->applicationCacheHost()->maybeLoadFallbackForError(m_coreLoader.get(), error))
         return;
@@ -181,15 +183,15 @@ void WebResourceLoader::didReceiveResource(const ShareableResource::Handle& hand
     LOG(Network, "(WebProcess) WebResourceLoader::didReceiveResource for '%s'", m_coreLoader->url().string().utf8().data());
 
 #if USE(QUICK_LOOK)
-    if (m_quickLookHandle) {
+    if (QuickLookHandle* quickLookHandle = m_coreLoader->documentLoader()->quickLookHandle()) {
         RetainPtr<CFDataRef> cfBuffer = handle.tryWrapInCFData();
         if (cfBuffer) {
-            if (m_quickLookHandle->didReceiveData(cfBuffer.get())) {
-                m_quickLookHandle->didFinishLoading();
+            if (quickLookHandle->didReceiveData(cfBuffer.get())) {
+                quickLookHandle->didFinishLoading();
                 return;
             }
         } else
-            m_quickLookHandle->didFail();
+            quickLookHandle->didFail();
     }
 #endif
 
